tests/ui/resolve/issue-111312.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/issue-111312.rs:10:5
   |
LL |     HasNot::has();
   |     ^^^^^^
   |
help: add `dyn` keyword before this trait
   |
LL |     <dyn HasNot>::has();
   |     ++++       +

error[E0599]: no function or associated item named `has` found for trait `HasNot`
  --> $DIR/issue-111312.rs:10:13
   |
LL |     HasNot::has();
   |             ^^^ function or associated item not found in `HasNot`
   |
note: `Has` defines an item `has`
  --> $DIR/issue-111312.rs:3:1
   |
LL | trait Has {
   | ^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0599, E0782.
For more information about an error, try `rustc --explain E0599`.
